scripts/simple_cluster_config/apps/wordpress/wordpress_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: hostname.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/apps/wordpress"
        backend:
          service:
            name: wordpress
            port:
              number: 80
